# Beacon

./: .env.example  .gitignore  README.md  main.py  peer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: bootstrap_server.py  peer.py
src/: database.py  peer_registration.py  test_server.py
tests/: discover_peers.py  file_transfer.py  get_peers.py  peer_registration.py  peer_to_peer_conn.py  test_peer.py  test_server.py
