[project]
name = "beacon"
version = "0.1.0"
description = "Beacon is a peer-to-peer file sharing network that enables direct, encrypted communication between peers without relying on centralized servers. It combines TCP sockets, a bootstrap discovery service, and symmetric encryption to create a lightweight yet secure sharing mesh."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "requests",
  "python-dotenv",
]
